# invenio-damap

./: CODEOWNERS  README.md  setup.cfg
invenio_damap/: __init__.py  config.py  export.py  ext.py  webpack.py
invenio_damap/assets/semantic-ui/js/invenio_damap/: DMPButton.js  DMPEntry.js  DMPModal.js  dmpButton.js  index.js  render.js
invenio_damap/resources/: __init__.py  config.py  resources.py
invenio_damap/services/: __init__.py  config.py  errors.py  results.py  schema.py  services.py
invenio_damap/templates/semantic-ui/invenio_damap/: damap_sidebar.html
invenio_damap/templates/semantic-ui/invenio_damap/macros/: detail.html
invenio_damap/views/: __init__.py  api.py  ui.py
