# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-DAMAP is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-damap
version = attr: invenio_damap.__version__
description = InvenioRDM module for the Invenio-DAMAP connection.
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm damap
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/fair-data-austria/invenio-damap
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Faker>=2.0.3
    invenio-accounts>=2.0.0,<3.0.0
    invenio-records-resources>=1.0.0,<2.0.0
    # marshmallow>=0.5.3,<0.6.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    importlib-metadata<5.0.0
    invenio-app>=1.3.4,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    invenio-rdm-records>=1.2.0,<2
    itsdangerous<2.1.0
    pluggy<1.0
    pytest<7.2.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_damap = invenio_damap:InvenioDAMAP
invenio_base.api_apps =
    invenio_damap = invenio_damap:InvenioDAMAP
invenio_base.api_blueprints =
    invenio_damap = invenio_damap.views:create_invenio_damap_api_blueprint
# invenio_jsonschemas.schemas =
#     invenio_damap = invenio_damap.records.jsonschemas
invenio_i18n.translations =
    invenio_damap = invenio_damap
# invenio_assets.webpack =
#     invenio_damap = invenio_damap.webpack:theme

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = invenio_damap/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_damap/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_damap/translations/messages.pot
output-dir = invenio_damap/translations/

[update_catalog]
input-file = invenio_damap/translations/messages.pot
output-dir = invenio_damap/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_damap --cov-report=term-missing
testpaths = docs tests invenio_damap
